# Scripts

./: .env  Apache license v2  README.md  auto-buy.py  auto-click.py  auto-crypto.py  auto-mail.py  auto-type.py  auto-write.py  face-recognition.py  findcoordinates.py  gettermina.py  hangman.py  main.py  response  rotateproxy.py  script  subprocess.py  text.txt  tktest.py  tktk.py  type
BuzEngine/: CMakeLists.txt  Line.cpp  gravity.cpp  main.cpp  particle.cpp  particle.h  rectangles.cpp  rectangles.h
CPP/ImageFile/: main.cpp
StardewValleyMods/ClassLibrary1/: ClassLibrary1.sln
StardewValleyMods/StarDewMods/StarDewMods/: main.csproj
StardewValleyMods/StardewPP/StardewPP/: ModEntry.cs  content.json  manifest.json
StardewValleyMods/StardewPlus/: Class1.cs
StardewValleyMods/TicTacToe/TicTacToe/: Program.cs  TicTacToe.csproj
