cmake_minimum_required(VERSION 3.27)
project(BuzEngine)
include (FetchContent)
set(BUILD_SHARED_LIBS OFF)
FETCHCONTENT_DECLARE (SFML GIT_REPOSITORY https://github.com/SFML/SFML.git GIT_TAG 2.6.1)
FETCHCONTENT_MAKEAVAILABLE(SFML)
set(CMAKE_CXX_STANDARD 17)
add_executable(BuzEngine main.cpp particle.cpp)
target_link_libraries(BuzEngine sfml-graphics)